docs(api): produced documentation of election.info endpoints
